Converted to posts to use jekyll better

--- a/_posts/2016-01-07-module.md
+++ b/_posts/2016-01-07-module.md
@@ -1,12 +1,7 @@
 ---
 layout: chapter
-title: 16. Modules
-id: chapter16
+title: Modules
 permalink: /chapters/16/
-nextPage:
-  href: /chapters/6/
-previousPage:
-  href: /chapters/4
 ---
 
 A module is a section of the page that represents a piece of functionality in it's own right. It is visually identifable as a 'thing' that does 'something'.
