--- a/_posts/2016-01-08-reuse.md
+++ b/_posts/2016-01-08-reuse.md
@@ -1,10 +1,7 @@
 ---
 layout: chapter
-title: 7. Reuse
-id: chapter7
-permalink: /chapters/7/
-previousPage:
-  href: /chapters/6/
+title: Reuse
+permalink: /chapters/8/
 ---
 
 Reuse is something not worth striving for but if it comes up as a bonus then great.
