--- a/_posts/2016-01-05-ids.md
+++ b/_posts/2016-01-05-ids.md
@@ -1,12 +1,7 @@
 ---
 layout: chapter
-title: 5. A note about IDs
-id: chapter5
+title: IDs
 permalink: /chapters/5/
-previousPage:
-  href: /chapters/4/
-nextPage:
-  href: /chapters/6/
 ---
 
 Sometimes we need IDs in our HTML. Form controls are linked to labels via `id` and `for` attributes. Sometimes we need to utilise internal anchors to allow the user to scroll to various parts of the page. Both of these examples improve the user experience.
