--- a/_posts/2016-01-06-state.md
+++ b/_posts/2016-01-06-state.md
@@ -1,13 +1,7 @@
 ---
 layout: chapter
-title: 6. State
-id: chapter5
-chapterNumber: 5
+title: State
 permalink: /chapters/6/
-previousPage:
-  href: /chapters/5/
-nextPage:
-  href: /chapters/7/
 ---
 
 **What do I mean by state?** Is the module *showing* or *hiding*. Is it *active* or *inactive*, is it in a *loading* state or not? Each of these potentially mean that the UI *looks* different.
