--- a/_posts/2016-01-07-module.md
+++ b/_posts/2016-01-07-module.md
@@ -17,3 +17,24 @@ You will see what I mean when we carry out some examples together and ultimately
 ## Identifying a module from the visual design
 
 Examples coming soon.
+
+## Example: Shopping basket
+
+	.m-basket {}
+
+	.m-basket-title {}
+
+	.m-basket-item {}
+
+	.m-basket-removeButton {}
+
+Now let's say that we now had a mini basket throughout the checkout process. So there was a basket on the checkout and it looked different and was a cut down summary version&mdash;for exmaple there was no remove button. We have lot's of options. It could be known as `m-orderSummary` or it might be `m-basketSummary` or `m-miniBasket`.
+
+All of these names are semantic, all of these names are module friendly and unique. So pick whatever you prefer after you have given it some thought.
+
+On a project I was recently on we ended up with `m-orderSummary`.
+
+	.m-orderSummary {}
+
+	.m-orderSummary-title {}
+
