--- a/_posts/2016-01-07-module.md
+++ b/_posts/2016-01-07-module.md
@@ -4,7 +4,7 @@ title: Modules
 permalink: /chapters/16/
 ---
 
-A module is a section of the page that represents a piece of functionality in it's own right. It is visually identifable as a 'thing' that does 'something'.
+A module is a section of the page that represents a piece of functionality in it's own right.
 
 For example a search feature residing within the header might be a module.
 
