--- a/_posts/2016-01-08-reuse.md
+++ b/_posts/2016-01-08-reuse.md
@@ -4,9 +4,9 @@ title: Reuse
 permalink: /chapters/8/
 ---
 
-Reuse is something not worth striving for but if it comes up as a bonus then great.
+Typically, reuse is important when it comes to software engineering and I strive for it every day.
 
-99.99999% of the time I suggest duplication over reuse which goes against all my natural instincts as an engineer. But what works for all other programming languages does not work for the weirdly wonderful and unique CSS.
+However, I won't blindly abstract something unless it's useful to do so. And when it comes to CSS, I take a duplication first approach for various important reasons.
 
 Let's take a look at a couple of interesting examples
 
