--- a/404.md
+++ b/404.md
@@ -4,6 +4,6 @@ id: home
 title: We couldn't find the page
 ---
 
-# Sorry! We can't find the page you asked for
+# Sorry, the page cannot be found.
 
-Fortunately, you might be able to use the links at the top, to find what you're looking for.
+This site is really small, so try visiting the [homepage](/).
