--- a/404.md
+++ b/404.md
@@ -1,9 +1,6 @@
 ---
-layout: default
-id: home
-title: We couldn't find the page
+layout: other
+title: We can't find the page you asked for. Sorry.
 ---
-
-# Sorry, the page cannot be found.
 
 This site is really small, so try visiting the [homepage](/).
